--- a/vite-project/src/pages/Home.Module.css
+++ b/vite-project/src/pages/Home.Module.css
@@ -1,16 +1,14 @@
-/* Remove duplicate h1 class */
-/* Adjust the existing h1 class for header styling */
 .header {
     display: flex;
-    justify-content: flex-start; /* Aligns the nav to the right */
+    justify-content: flex-start;
     padding: 10px;
-    background-color: #f8f8f8; /* Optional: Add background color */
-    position: fixed; /* Fixes the nav to the top of the page */
+    background-color: #f8f8f8;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    z-index: 1000; /* Ensure the nav is above other elements */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
 .options {
@@ -19,14 +17,14 @@
     top: 0;
     flex-direction: row;
     padding: 10px;
-    margin-top: 60px; /* Adjust the margin-top to be below the header */
+    margin-top: 60px;
 }
 
 .info {
     position: absolute;
-    top: 100px; /* Adjust this value if needed to ensure it appears below the header */
+    top: 100px;
     left: 20px;
-    background-color: #f0f0f0; /* Optional: Add background color */
+    background-color: #f0f0f0;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
@@ -34,10 +32,10 @@
 
 .todos-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Adjust the number of columns as needed */
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
-    margin-top: 80px; /* Add margin-top to account for the fixed header */
+    margin-top: 80px;
 }
 
 .user-todo {
@@ -63,10 +61,9 @@ body {
     font-family: Arial, sans-serif;
 }
 
-
 h1 {
     text-align: center;
-    margin-top: 60px; /* Add margin-top to account for the fixed header */
+    margin-top: 60px;
 }
 
 .todos-grid {
@@ -76,9 +73,23 @@ h1 {
 
 .filter-options {
     display: flex;
+    flex-direction: row;
     align-items: center;
     margin-bottom: 20px;
-    justify-content: center;
+}
+
+.filter-select {
+    margin-bottom: 10px;
+}
+
+.search-bar {
+    margin-bottom: 10px;
+}
+
+.checkboxes {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .filter-options label {
